--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 .card {
     width: 350px;
     min-height: 230px;
-    border: 5px solid grey;
+    border: 5px solid black;
 }
 .picture-section{
     height: 150px;
     position: relative;
 }
 .picture {
-    width: 350px;
+    width: 200px;
     height: 150px;
 }
 .update {
@@ -30,35 +30,38 @@
 }
 .info {
     padding: 8px;
-    color: #2d3748;
+    color: cornflowerblue;
 }
 .listing {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     margin-bottom: 4px;
+    color: royalblue;
 }
 .price {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: bolder;
 }
 .address {
-    font-weight: bold;
+    font-weight: bolder;
     margin-bottom: 4px;
 }
 .type {
     font-size: 12px;
 }
 .card {
-    width: 350px;
+    width: 200px;
     min-height: 230px;
-    border-bottom: 4px solid #006aff;
+    border-bottom: 4px solid black;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     margin: 16px;
 }
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 20px 16px 0  cornflowerblue;
 }
 a {
     text-decoration: none;
 }
+
+
